[gd_scene load_steps=8 format=2]

[ext_resource path="res://CombatOverlay/attck.png" type="Texture" id=1]
[ext_resource path="res://CombatOverlay/ActionMenu.gd" type="Script" id=2]
[ext_resource path="res://CombatOverlay/attack-wait.png" type="Texture" id=3]
[ext_resource path="res://CombatOverlay/recruit.png" type="Texture" id=4]
[ext_resource path="res://CombatOverlay/recruit-hover.png" type="Texture" id=5]
[ext_resource path="res://CombatOverlay/wait.png" type="Texture" id=6]
[ext_resource path="res://CombatOverlay/wait_hover.png" type="Texture" id=7]

[node name="ActionMenu" type="PopupPanel"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 160 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 162.0
rect_scale = Vector2( 0.6, 0.6 )

[node name="AttackButton" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 0.952941, 0.909804, 0.909804, 1 )
margin_right = 158.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
action_mode = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="RecruitButton" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 0.984314, 1, 1, 1 )
margin_top = 54.0
margin_right = 167.0
margin_bottom = 104.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="WaitButton" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 0.984314, 1, 1, 1 )
margin_top = 108.0
margin_right = 113.0
margin_bottom = 158.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
action_mode = 0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
